fixed bug with modal height on small height phones

--- a/src/scss/components/lightbox.scss
+++ b/src/scss/components/lightbox.scss
@@ -30,6 +30,9 @@
 
 .details-card {
   max-width: 100%;
+  @media screen and (max-width: 360px) {
+    height: 100vh;
+  }
 
   &__wrapper {
     width: 290px;
